# Kaito

./: .dockerignore  .gitignore  LICENSE  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  railway.api.toml  railway.web.toml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  database.py
apps/api/app/core/ai/: __init__.py  openai_training_block.py  (+1 more)
apps/api/app/observability/: sentry.py  training_generation.py
apps/api/tests/: conftest.py  test_ai_config.py  test_main.py  test_sentry_bootstrap.py
apps/api/tests/auth/: conftest.py  test_auth_me.py  test_dependency.py  test_local_hs256_verifier.py  test_missing_config.py  test_provider_isolation.py  test_provider_local_hs256_selection.py  test_supabase_verifier.py
apps/api/tests/integration/: test_onboarding_rls.py  test_training_plan_persistence.py  test_training_plan_rls.py  test_training_plan_schema.py
apps/api/tests/planning/: test_approach_eligibility.py  test_generate_training_block.py  test_generated_block_policy.py  test_generation_context.py  test_generation_contract.py  test_generation_validator.py  test_goal_demand.py  test_readiness_calendar.py  test_readiness_capacity.py  test_router.py  test_session_trajectory.py  test_training_plan_api.py  test_training_plan_draft.py  test_training_plan_draft_router.py  test_training_plan_persistence.py  test_weekly_distance_projection.py
apps/api/tests/runner_profile/: test_database.py  test_domain.py  test_repository.py  test_router.py  test_use_cases.py
(+348 files in other folders)
