[project]
name = "kaito-api"
version = "0.0.0"
description = "Minimal FastAPI boundary for the Kaito scaffold."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "pyjwt[crypto]>=2.13.0",
  "psycopg[binary]>=3.2.10,<3.3",
  "sqlalchemy>=2.0.0,<2.1",
  "sentry-sdk==2.64.0",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = ["httpx==0.28.1", "pytest==8.3.5", "ruff==0.8.4"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/integration/test_onboarding_rls.py" = ["E501", "I001"]
